# BambuStudio

./: .ag_root_changed_files.txt  .clang-format  .editorconfig  .gitignore  AGENTS.md  BUILD.md  Build.PL  BuildFedora.sh  BuildLinux.sh  BuildMac.sh  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  DockerBuild.sh  DockerEntrypoint.sh  DockerRun.sh  Dockerfile  GLGizmoFdmSupports_origin.cpp  IMPLEMENTATION_COMPLETE.md  README.md  RELEASE_GUIDE.md  SECURITY.md  VOROPP_STATUS.md  a.txt  build.sh  build_bambu_mac.sh  build_ninja.bat  build_win.bat  cliff.toml  diff_summary.txt  localazy.json  pixi.toml  renovate.json  version.inc  生成脚本.bat
src/ag/: CMakeLists.txt
src/ag/ballerase/: BallEraserBoolean.cpp  BallEraserBoolean.hpp  BallEraserSession.hpp  BallEraserStepLogger.hpp
src/ag/customcut/: ColorCutAppearanceSnapshot.cpp  ColorCutAppearanceSnapshot.hpp  ColorCutAppearanceTypes.hpp  ColorCutAttributeRepository.cpp  ColorCutAttributeRepository.hpp  ColorCutAttributeTransfer.cpp  ColorCutAttributeTransfer.hpp  ColorCutCoordinator.cpp  ColorCutCoordinator.hpp  ColorCutDiagnostics.cpp  ColorCutDiagnostics.hpp  ColorCutGeometryBackend.hpp  ColorCutIntegrationBridge.cpp  ColorCutIntegrationBridge.hpp  ColorCutLegacyPlaneBackend.cpp  ColorCutLegacyPlaneBackend.hpp  ColorCutMcutBackend.cpp  ColorCutMcutBackend.hpp  ColorCutProvenance.cpp  ColorCutProvenance.hpp  ColorCutRepositoryBridge.cpp  ColorCutRepositoryBridge.hpp  ColorCutTypes.hpp  ColorCutValidation.cpp  ColorCutValidation.hpp  ColorCutVolumeBuilder.cpp  ColorCutVolumeBuilder.hpp
src/ag/warpcut/: WarpCutCoordinator.cpp  WarpCutCoordinator.hpp  WarpCutGeometryBackend.cpp  WarpCutGeometryBackend.hpp  WarpCutRequest.hpp  WarpCutSurfaceClassifier.cpp  WarpCutSurfaceClassifier.hpp  WarpCutTransferBridge.cpp  WarpCutTransferBridge.hpp  WarpCutTypes.hpp
src/imgui/: CMakeLists.txt  imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp  imstb_truetype.h
src/libslic3r/: AABBMesh.cpp  AABBMesh.hpp  AABBTreeIndirect.hpp  AABBTreeLines.hpp  AStar.hpp  AnyPtr.hpp  AppConfig.cpp  AppConfig.hpp  ArcFitter.cpp  ArcFitter.hpp  Arrange.cpp  Arrange.hpp  BlacklistedLibraryCheck.cpp  BlacklistedLibraryCheck.hpp  BoundingBox.cpp  BoundingBox.hpp  BridgeDetector.cpp  BridgeDetector.hpp  Brim.cpp  Brim.hpp  BrimEarsPoint.hpp  BuildVolume.cpp  BuildVolume.hpp  ByObjectPrintData.cpp  ByObjectPrintData.hpp  CMakeLists.txt  Calib.cpp  Calib.hpp  Channel.hpp  Circle.cpp  Circle.hpp  Clipper2Utils.cpp  Clipper2Utils.hpp  Clipper2ZUtils.hpp  ClipperUtils.cpp  ClipperUtils.hpp  ClipperZUtils.hpp  Color.cpp  Color.hpp  ColorDecomposeRecipe.cpp  (+349 more)
src/libslic3r/Arachne/: PerimeterOrder.cpp  PerimeterOrder.hpp  SkeletalTrapezoidation.cpp  SkeletalTrapezoidation.hpp  SkeletalTrapezoidationEdge.hpp  SkeletalTrapezoidationGraph.cpp  SkeletalTrapezoidationGraph.hpp  SkeletalTrapezoidationJoint.hpp  WallToolPaths.cpp  WallToolPaths.hpp
src/libslic3r/CSGMesh/: CSGMesh.hpp  CSGMeshCopy.hpp  ModelToCSGMesh.hpp  PerformCSGMeshBooleans.hpp  SliceCSGMesh.hpp  TriangleMeshAdapter.hpp  VoxelizeCSGMesh.hpp
src/libslic3r/Execution/: Execution.hpp  ExecutionSeq.hpp  ExecutionTBB.hpp
src/libslic3r/Fill/: Fill.cpp  Fill.hpp  Fill3DHoneycomb.cpp  Fill3DHoneycomb.hpp  FillAdaptive.cpp  FillAdaptive.hpp  FillBase.cpp  FillBase.hpp  FillConcentric.cpp  FillConcentric.hpp  FillConcentricInternal.cpp  FillConcentricInternal.hpp  FillConcentricWGapFill.cpp  FillContour.cpp  FillContour.hpp  FillCrossHatch.cpp  FillCrossHatch.hpp  FillFloatingConcentric.cpp  FillFloatingConcentric.hpp  FillGyroid.cpp  FillGyroid.hpp  FillHoneycomb.cpp  FillHoneycomb.hpp  FillLightning.cpp  FillLightning.hpp  FillLine.cpp  FillLine.hpp  FillPlanePath.cpp  FillPlanePath.hpp  FillRectilinear.cpp  FillRectilinear.hpp  FillSpacing.cpp
src/libslic3r/Format/: 3mf.cpp  3mf.hpp  AMF.cpp  AMF.hpp  AssemblyStepsJson.cpp  AssemblyStepsJson.hpp  AssemblyTreeJson.cpp  AssemblyTreeJson.hpp  AssimpImport.cpp  AssimpImport.hpp  FBX.cpp  FBX.hpp  ModelIO.hpp  ModelIO.mm  OBJ.cpp  OBJ.hpp  ResourcePathUtils.hpp  SL1.cpp  SL1.hpp  STEP.cpp  STEP.hpp  STL.cpp  STL.hpp  Secure.cpp  Secure.hpp  bbs_3mf.cpp  bbs_3mf.hpp  glTF.cpp  glTF.hpp  objparser.cpp  objparser.hpp  svg.cpp  svg.hpp
src/libslic3r/GCode/: AvoidCrossingPerimeters.cpp  AvoidCrossingPerimeters.hpp  BedExcludeChecker.cpp  BedExcludeChecker.hpp  ConflictChecker.cpp  ConflictChecker.hpp  CoolingBuffer.cpp  CoolingBuffer.hpp  GCodeEditer.cpp  GCodeEditer.hpp  GCodeEditor.cpp  GCodeEditor.hpp  (+28 more)
tests/fff_print/: CMakeLists.txt  LEGACY_MIGRATION.md  test_data.cpp  test_fill_smoke.cpp  test_gcode_origin_smoke.cpp  test_gcode_reader_smoke.cpp  test_gcodewriter_smoke.cpp  test_gcodewriter_state_smoke.cpp  test_gcodewriter_travel.cpp  test_model_basic_smoke.cpp  test_model_smoke.cpp  test_output_filename.cpp  test_print.cpp  test_print_filament_mapping_smoke.cpp  test_print_init_smoke.cpp  test_print_process_core_smoke.cpp  test_print_process_math_smoke.cpp  test_print_process_smoke.cpp  test_print_skirt_brim_smoke.cpp  test_print_solid_layers_smoke.cpp  test_printgcode.cpp  test_printobject.cpp  test_printobject_layers_smoke.cpp  test_skirt_flow.cpp  test_support_material_layers_smoke.cpp  test_support_material_smoke.cpp  test_tool_ordering.cpp  test_trianglemesh_basic_smoke.cpp  test_trianglemesh_geometry_smoke.cpp
tests/fila_manager/: CMakeLists.txt  fila_manager_tests_main.cpp
tests/filament_group/: CMakeLists.txt  README.md  REGRESSION_TEST_PLAN.md  fg_test_evaluator.hpp  fg_test_serialization.hpp  fg_test_utils.hpp  filament_group_regression_main.cpp  test_data_generator.cpp
tests/libslic3r/: CMakeLists.txt  test_arachne_beading.cpp  test_calib_pa_pattern.cpp  test_calib_pa_width.cpp  test_config.cpp  test_config_runtime.cpp  test_config_smoke.cpp  test_debounce.cpp  test_placeholder_parser_smoke.cpp  test_print_filament_mapping_config_sync.cpp  test_print_filament_mapping_rules.cpp  test_timeutils.cpp  test_wave_overhangs.cpp
tests/slic3rutils/: CMakeLists.txt
(+7298 files in other folders)
